correcciones en el front

--- a/templates/contraseña_olvidada.html
+++ b/templates/contraseña_olvidada.html
@@ -12,8 +12,7 @@
 <body>
   <div class="page-container">
     <div class="mobile-text-container">
-      <p class="login-info">Usted va a recuperar su contraseña de</p>
-      <h2 class="login-role">Institución</h2>
+      <p class="login-info">Usted va a recuperar su contraseña</p>
     </div>
 
     <div class="login-panel">
