--- a/templates/login_familiar.html
+++ b/templates/login_familiar.html
@@ -50,12 +50,12 @@
           </div>
 
           <div class="forgot-password">
-            ¿Olvidaste tu contraseña?
+            <a href="/templates/contraseña_olvidada.html">¿Olvidaste tu contraseña?</a>
           </div>
 
           <button type="button" class="btn btn-primary">Iniciar Sesión</button>
 
-          <a href="{{ url_for('registro_familiar') }}"><button type="button" class="btn btn-secondary">Registrarse</button></a>
+          <a href="/templates/registro_familiar.html"><button type="button" class="btn btn-secondary">Registrarse</button></a>
         </form>
       </div>
     </div>
