--- a/templates/login_institucional.html
+++ b/templates/login_institucional.html
@@ -50,12 +50,10 @@
           </div>
         
           <div class="forgot-password">
-            ¿Olvidaste tu contraseña?
+          <a href="/templates/contraseña_olvidada.html">¿Olvidaste tu contraseña?</a>
           </div>
         
           <button type="submit" class="btn btn-primary">Iniciar Sesión</button>
-        
-          <a href="{{ url_for('registro_institucion') }}"><button type="button" class="btn btn-secondary">Registrarse</button></a>
         </form>
       </div>
     </div>
