--- a/templates/pagina_principal.html
+++ b/templates/pagina_principal.html
@@ -26,7 +26,7 @@
       <div class="cards-container">
         
         <div class="card">
-            <a href="{{ url_for('login_institucional') }}">
+            <a href="/templates/login_institucional.html">
               <div class="card-image">
                 <img src="/static/img/Coles.webp" alt="Institución">
               </div>
@@ -38,7 +38,7 @@
         </div>
 
         <div class="card">
-            <a href="{{ url_for('login_familiar') }}">
+            <a href="/templates/login_familiar.html">
               <div class="card-image">
                 <img src="/static/img/familia.webp" alt="Familiar">
               </div>
